build/log/idf_py_stdout_output_75442
[0/2] Re-checking globbed directories...
[1/12] Performing build step for 'bootloader'
[1/1] cd /home/micu/esp/mycode/micu_ros_car/build/bootloader/esp-idf/esptool_py && /home/micu/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/micu/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/micu/esp/mycode/micu_ros_car/build/bootloader/bootloader.bin
Bootloader binary size 0x51b0 bytes. 0x2e50 bytes (36%) free.
[2/10] Building C object esp-idf/udp_tcp/CMakeFiles/__idf_udp_tcp.dir/udp_tcp.c.obj
FAILED: esp-idf/udp_tcp/CMakeFiles/__idf_udp_tcp.dir/udp_tcp.c.obj 
/home/micu/.espressif/tools/xtensa-esp32s3-elf/esp-12.2.0_20230208/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.2-1-g3b62af741a\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/micu/esp/mycode/micu_ros_car/build/config -I/home/micu/esp/mycode/micu_ros_car/components/udp_tcp -I/home/micu/esp/mycode/micu_ros_car/components/udp_tcp/include -I/home/micu/esp/esp-idf/components/newlib/platform_include -I/home/micu/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/micu/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/micu/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/micu/esp/esp-idf/components/freertos/esp_additions/include -I/home/micu/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/micu/esp/esp-idf/components/esp_hw_support/include -I/home/micu/esp/esp-idf/components/esp_hw_support/include/soc -I/home/micu/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/micu/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/micu/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/home/micu/esp/esp-idf/components/heap/include -I/home/micu/esp/esp-idf/components/log/include -I/home/micu/esp/esp-idf/components/soc/include -I/home/micu/esp/esp-idf/components/soc/esp32s3 -I/home/micu/esp/esp-idf/components/soc/esp32s3/include -I/home/micu/esp/esp-idf/components/hal/esp32s3/include -I/home/micu/esp/esp-idf/components/hal/include -I/home/micu/esp/esp-idf/components/hal/platform_port/include -I/home/micu/esp/esp-idf/components/esp_rom/include -I/home/micu/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/micu/esp/esp-idf/components/esp_rom/esp32s3 -I/home/micu/esp/esp-idf/components/esp_common/include -I/home/micu/esp/esp-idf/components/esp_system/include -I/home/micu/esp/esp-idf/components/esp_system/port/soc -I/home/micu/esp/esp-idf/components/esp_system/port/include/private -I/home/micu/esp/esp-idf/components/xtensa/include -I/home/micu/esp/esp-idf/components/xtensa/esp32s3/include -I/home/micu/esp/esp-idf/components/lwip/include -I/home/micu/esp/esp-idf/components/lwip/include/apps -I/home/micu/esp/esp-idf/components/lwip/include/apps/sntp -I/home/micu/esp/esp-idf/components/lwip/lwip/src/include -I/home/micu/esp/esp-idf/components/lwip/port/include -I/home/micu/esp/esp-idf/components/lwip/port/freertos/include -I/home/micu/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/micu/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/micu/esp/esp-idf/components/driver/include -I/home/micu/esp/esp-idf/components/driver/deprecated -I/home/micu/esp/esp-idf/components/driver/analog_comparator/include -I/home/micu/esp/esp-idf/components/driver/dac/include -I/home/micu/esp/esp-idf/components/driver/gpio/include -I/home/micu/esp/esp-idf/components/driver/gptimer/include -I/home/micu/esp/esp-idf/components/driver/i2c/include -I/home/micu/esp/esp-idf/components/driver/i2s/include -I/home/micu/esp/esp-idf/components/driver/ledc/include -I/home/micu/esp/esp-idf/components/driver/mcpwm/include -I/home/micu/esp/esp-idf/components/driver/parlio/include -I/home/micu/esp/esp-idf/components/driver/pcnt/include -I/home/micu/esp/esp-idf/components/driver/rmt/include -I/home/micu/esp/esp-idf/components/driver/sdio_slave/include -I/home/micu/esp/esp-idf/components/driver/sdmmc/include -I/home/micu/esp/esp-idf/components/driver/sigma_delta/include -I/home/micu/esp/esp-idf/components/driver/spi/include -I/home/micu/esp/esp-idf/components/driver/temperature_sensor/include -I/home/micu/esp/esp-idf/components/driver/touch_sensor/include -I/home/micu/esp/esp-idf/components/driver/twai/include -I/home/micu/esp/esp-idf/components/driver/uart/include -I/home/micu/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/micu/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/micu/esp/esp-idf/components/esp_pm/include -I/home/micu/esp/esp-idf/components/esp_ringbuf/include -I/home/micu/esp/mycode/micu_ros_car/components/protocal/UART -I/home/micu/esp/mycode/micu_ros_car/components/protocal/UART/include -I/home/micu/esp/mycode/micu_ros_car/components/protocal/proto_define/include -I/home/micu/esp/mycode/micu_ros_car/components/protocal/proto_utils/include -I/home/micu/esp/esp-idf/components/esp_wifi/include -I/home/micu/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/micu/esp/esp-idf/components/esp_event/include -I/home/micu/esp/esp-idf/components/esp_phy/include -I/home/micu/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/micu/esp/esp-idf/components/esp_netif/include -I/home/micu/esp/mycode/micu_ros_car/components/motor/include -I/home/micu/esp/mycode/micu_ros_car/components/lib/rotary_encoder/include -I/home/micu/esp/mycode/micu_ros_car/managed_components/espressif__pid_ctrl/include -I/home/micu/esp/mycode/micu_ros_car/components/protocal/ring_buffer -I/home/micu/esp/mycode/micu_ros_car/components/protocal/ring_buffer/include -I/home/micu/esp/esp-idf/components/json/cJSON -mlongcalls  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/micu/esp/mycode/micu_ros_car=. -fmacro-prefix-map=/home/micu/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/udp_tcp/CMakeFiles/__idf_udp_tcp.dir/udp_tcp.c.obj -MF esp-idf/udp_tcp/CMakeFiles/__idf_udp_tcp.dir/udp_tcp.c.obj.d -o esp-idf/udp_tcp/CMakeFiles/__idf_udp_tcp.dir/udp_tcp.c.obj -c /home/micu/esp/mycode/micu_ros_car/components/udp_tcp/udp_tcp.c
/home/micu/esp/mycode/micu_ros_car/components/udp_tcp/udp_tcp.c:23: warning: "TAG" redefined
   23 | #define TAG "TCP_UDP"
      | 
In file included from /home/micu/esp/mycode/micu_ros_car/components/udp_tcp/udp_tcp.c:21:
/home/micu/esp/mycode/micu_ros_car/components/udp_tcp/include/utilities.h:3: note: this is the location of the previous definition
    3 | #define TAG (__FILE__ ":" TOSTRING(__LINE__))
      | 
/home/micu/esp/mycode/micu_ros_car/components/udp_tcp/udp_tcp.c: In function 'start_mdns_service':
/home/micu/esp/mycode/micu_ros_car/components/udp_tcp/udp_tcp.c:161:25: error: implicit declaration of function 'mdns_init'; did you mean 'memp_init'? [-Werror=implicit-function-declaration]
  161 |         esp_err_t err = mdns_init();
      |                         ^~~~~~~~~
      |                         memp_init
In file included from /home/micu/esp/mycode/micu_ros_car/components/udp_tcp/udp_tcp.c:14:
/home/micu/esp/mycode/micu_ros_car/components/udp_tcp/udp_tcp.c:166:25: error: implicit declaration of function 'mdns_hostname_set' [-Werror=implicit-function-declaration]
  166 |     ESP_RETURN_ON_ERROR(mdns_hostname_set(MDNS_HOSTNAME), TAG, "");// 设置 hostname
      |                         ^~~~~~~~~~~~~~~~~
/home/micu/esp/esp-idf/components/esp_common/include/esp_check.h:215:30: note: in definition of macro 'ESP_RETURN_ON_ERROR'
  215 |         esp_err_t err_rc_ = (x);                                                                \
      |                              ^
/home/micu/esp/mycode/micu_ros_car/components/udp_tcp/udp_tcp.c:167:25: error: implicit declaration of function 'mdns_instance_name_set' [-Werror=implicit-function-declaration]
  167 |     ESP_RETURN_ON_ERROR(mdns_instance_name_set(MDNS_INSTANCE_NAME), TAG, "");// 设置实例名
      |                         ^~~~~~~~~~~~~~~~~~~~~~
/home/micu/esp/esp-idf/components/esp_common/include/esp_check.h:215:30: note: in definition of macro 'ESP_RETURN_ON_ERROR'
  215 |         esp_err_t err_rc_ = (x);                                                                \
      |                              ^
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
